Add support for 2FA in user model and API
- Added 'is_2fa_active' field to the user model in the API openapi.yml file.
- Created a Users2FA object for each new user in the user model.
- Updated the user view to return the 'is_2fa_active' status.

Refs #178
