# api/openapi.yml
@@ -443,6 +443,10 @@ components:
           type: string
           description: メールアドレス
           example: example@email.com
+        is_2fa_active:
+          type: boolean
+          description: 2FAの状態
+          example: true
     postUserIconResponse:
       properties:
         uuid:
